tests/forester-regre/test-f0056.c
../forester/memset_test_invalid_deref.c